Otro intento mas

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>HOLA MUNDO</h1>
     <h1>HOLA 2 MUNDO</h1>
     <h1>HOLA no GUARDAR</h1>
-    HOLA HOLA HOLA HHOLA
+    <h1>HOLA MAS OTRA</h1>
   </body>
 </html>
